# chess

./: Cargo.toml
src/: main.rs
src/chess/: bitboard.rs  chess_piece.rs  chess_player.rs  magic_bitboards.rs  mod.rs  position.rs
