[package]
name = "chess"
version = "0.1.0"
authors = ["Aj0SK <andrejkorman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
impl_ops = "0.1.1"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
lazy_static = "1.4.0"
rand="0.8.3"

[dependencies.sdl2]
version = "0.35.1"
default-features = false
features = ["image"]